# mxl

examples/: Dockerfile  docker-compose-fabrics.yaml  docker-compose-tools.yaml  fabrics-demo.md
lib/fabrics/include/mxl/: fabrics.h
lib/fabrics/ofi/: CMakeLists.txt
lib/fabrics/ofi/src/: fabrics.cpp
lib/fabrics/ofi/src/internal/: Address.cpp  AddressVector.cpp  AudioBounceBuffer.cpp  AudioBounceBuffer.hpp  Completion.hpp  DataLayout.cpp  DataLayout.hpp  Domain.cpp  Domain.hpp  Endpoint.cpp  Endpoint.hpp  Event.cpp  Exception.hpp  FabricInfo.cpp  FabricInfo.hpp  ImmData.hpp  Initiator.cpp  Initiator.hpp  LocalRegion.cpp  LocalRegion.hpp  MemoryRegion.cpp  MemoryRegion.hpp  Protocol.cpp  Protocol.hpp  ProtocolEgressRMA.cpp  ProtocolEgressRMA.hpp  ProtocolIngressRMA.cpp  ProtocolIngressRMA.hpp  RCInitiator.cpp  RCInitiator.hpp  RCTarget.cpp  RCTarget.hpp  RDMInitiator.cpp  RDMInitiator.hpp  RDMTarget.cpp  RDMTarget.hpp  Region.cpp  Region.hpp  RegisteredRegion.hpp  Target.cpp  (+3 more)
lib/include/mxl/: mxl.h
lib/tests/fabrics/: test_basics.cpp
lib/tests/fabrics/ofi/: Util.hpp
rust/gst-mxl-rs/src/mxlsink/: imp.rs  render_audio.rs  render_data.rs  render_video.rs  state.rs
rust/gst-mxl-rs/src/mxlsrc/: mxl_helper.rs
rust/gst-mxl-rs/tests/: data_round_trip.rs
rust/mxl/src/: instance.rs
rust/mxl/src/flow/: flowdef.rs
rust/mxl/tests/: basic_tests.rs
tools/mxl-fabrics-demo/: demo.cpp
